apps/gitops/argocd/network-policy.yaml
# Policy 1: Default policy for the namespace
# Allows all intra-namespace communication, DNS, and K8s API access.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-default-policy
  namespace: argocd
spec:
  endpointSelector: { } # Apply to all pods in the namespace
  # ----=== Ingress ===----
  ingress:
    # Allow all communication from within the namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
  # ----=== Egress ===----
  egress:
    # Allow all communication to within the namespace
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
    # Allow access to the Kubernetes API server for controllers
    - toEntities:
        - "kube-apiserver"
        - "host"          # Needed if API is on the same node
        - "remote-node"   # Needed if API is on another node
    - toCIDR:
        - "10.10.1.250/32" # Your VIP (Since Argo is configured to use this URL)
        - "10.10.1.101/32" # Node 1
        - "10.10.1.102/32" # Node 2
        - "10.10.1.103/32" # Node 3
        - "10.10.1.201/32" # Worker 1
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP

---
# Policy 2: Allow external ingress to the ArgoCD server and egress to external clusters
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-policy
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  # ----=== Ingress ===----
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  # ----=== Egress ===----
  egress:
    # Allow access to external clusters (including local cluster via external VIP)
    - toEntities:
        - "world"
        - "host"          # Needed if API is on the same node
        - "remote-node"   # Needed if API is on another node
    - toCIDR:
        - "10.10.1.250/32" # Your VIP (Since Argo is configured to use this URL)
        - "10.10.1.101/32" # Node 1
        - "10.10.1.102/32" # Node 2
        - "10.10.1.103/32" # Node 3
        - "10.10.1.201/32" # Worker 1
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP

---
# Policy 3: Allow repo-server to access external Git repositories
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server-egress-policy
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  # ----=== Egress ===----
  egress:
    # Allow access to Git repositories over HTTPS and SSH
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
        - ports:
            - port: "443"
              protocol: TCP
        - ports:
            - port: "22"
              protocol: TCP
